--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
     "sort-by": "^1.2.0"
